syntax = "proto3";

package zoover;

service Eventstore {
  rpc GetEvents (GetEventsRequest) returns (GetEventsResponse) {}
  rpc SetEvents (SetEventsRequest) returns (SetEventsResponse) {}
  rpc Subscribe (SubsribeRequest) returns (stream SubscribeResponse) {};
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {};
}

message Event {
  string eventType = 1;
  bytes eventBody = 2;
  string eventTimestamp = 3;
}

message GetEventsRequest {
  string streamId = 1;
}

message GetEventsResponse {
  repeated Event events = 1;
}

message SetEventsRequest {
  string streamId = 1;
  repeated Event events = 2;
}

message SetEventsResponse {

}

message SubsribeRequest {
  repeated string events = 1;
  bool fromBegging = 2;
}

message SubscribeResponse {
  repeated Event events = 1;
}

message GetInfoRequest {

}

message GetInfoResponse {
  int32 streamsNumber = 1;
  repeated string streamsNames = 2;
  repeated string subscribers = 3;
}